[package]
name = "pl-update"
version = "3.1.1"
edition = "2021"
authors = ["Thomas Carver <thomas.carver@nova-labs.org>"]
repository = "https://github.com/TDC302/pl_update"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocking = "1.4.0"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
os_info = "3.8.2"
regex = "1.10.5"
